--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,22 @@ version: '3'
 services:
 
     nginx-1.10-be:
-        image: maxnag/nginx-1.10:latest
-        container_name: link-reduction-be_nginx-1.10
+        image: maxnag/link-reduction-be:latest
+        container_name: link-reduction-be
         restart: always
         ports:
             - 8080:80
         environment:
-            VIRTUAL_HOST: be
+            VIRTUAL_HOST: localhost-be
         links:
             - php7.2-fpm
         working_dir: "/var/www/be"
         volumes:
-            - ./www/link-reduction-be:/var/www/be:rw
-            - ./nginx/localhost-be.conf:/etc/nginx/sites-available/localhost.conf
-            - ./nginx/localhost-be.conf:/etc/nginx/sites-enabled/localhost.conf
-
-            - ./logs/nginx.error.log:/var/log/nginx/error.log
-            - ./logs/nginx.access.log:/var/log/nginx/access.log
+            - link-reduction-be:/var/www/be:rw
 
     nginx-1.10-fe:
-        image: maxnag/nginx-1.10:latest
-        container_name: link-reduction-fe_nginx-1.10
+        image: maxnag/link-reduction-fe:latest
+        container_name: link-reduction-fe
         restart: always
         ports:
             - 80:80
@@ -32,41 +27,34 @@ services:
             - php7.2-fpm
         working_dir: "/var/www/fe"
         volumes:
-            - ./www/link-reduction-fe:/var/www/fe:rw
-            - ./nginx/localhost-fe.conf:/etc/nginx/sites-available/localhost.conf
-            - ./nginx/localhost-fe.conf:/etc/nginx/sites-enabled/localhost.conf
-
-            - ./logs/nginx.error.log:/var/log/nginx/error.log
-            - ./logs/nginx.access.log:/var/log/nginx/access.log
+            - link-reduction-fe:/var/www/fe:rw
 
     mysql-5.6:
-        image: maxnag/mysql-5.6:latest
-        container_name: link-reduction-be_mysql-5.6
+        image: maxnag/link-reduction-mysql:latest
+        container_name: link-reduction-be-mysql
         restart: always
         ports:
-            - 3306:3306
+            - 3307:3306
         volumes:
             - db-data:/docker-entrypoint-initdb.d
 
-            - ./logs/mysql.error.log:/var/log/mysql/error.log
-
     php7.2-fpm:
-        image: maxnag/php7.2-fpm:latest
-        container_name: link-reduction-be_php7.2-fpm
+        image: maxnag/link-reduction-php:latest
+        container_name: link-reduction-be-php
         restart: always
-        ports:
-            - 9070:9000
         environment:
             TERM: xterm
             XDEBUG_CONFIG: remote_host=localhost
         working_dir: "/var/www/be"
         volumes:
-            - ./www/link-reduction-be:/var/www/be:rw
-
-            - ./logs/php-fpm.error.log:/var/log/php7.2-fpm.access.log
-            - ./logs/php-fpm.access.log:/var/log/php7.2-fpm.error.log
+            - link-reduction-be:/var/www/be:rw
         links:
             - mysql-5.6
+
 volumes:
     db-data:
+        external: false
+    link-reduction-be:
+        external: false
+    link-reduction-fe:
         external: false
